ncc/testsuite/negative/extension-methods-hiding.n
#pragma indent
// using Nemerle.Utility

def a = array [1, 2]
def b = a.ToList () // E: there is no member named `ToList' in array
